# bazel-demo

./: .bazelrc  .editorconfig  .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel  bazel-version.bzl  deps.bzl  package.json  tsconfig.json
app/: BUILD.bazel  hello.ts  index.ts  rules.bzl
main/: .bazelrc  WORKSPACE  package.json  tsconfig.json
main/app/: BUILD.bazel  index.ts
src/: BUILD.bazel  hello.ts  index.js
