package(default_visibility = ["//visibility:public"])

exports_files(["tsconfig.json"])

filegroup(
    name = "node_modules",
    srcs = glob([
        "node_modules/**/*",
    ]),
)

alias(
    name = "install",
    actual = "@nodejs//:npm",
)

alias(
    name = "app",
    actual = "@bazel_demo//src:main",
)

