load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

ts_library(
    name = "ts_default_library",
    srcs = [
        "index.ts",
        "hello.ts",
    ],
    module_name = "bazel_demo/app",
    deps = [
        "@npm//@types/node",
        "@npm//chalk",
    ],
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "app",
    entry_point = ":index.ts",
    data = [":ts_default_library"],
    visibility = ["//visibility:public"],
)
