load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load(":rules.bzl", "runner")

ts_library(
    name = "ts_default_library",
    srcs = [
        "index.ts",
        "hello.ts",
    ],
    module_name = "bazel_demo/app",
    deps = [
        "@npm//@types/node",
    ],
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "app",
    entry_point = ":index.ts",
    data = [":ts_default_library"],
    visibility = ["//visibility:public"],
)

runner(
    name = "runner",
    app = ":app",
    say = "friend",
    visibility = ["//visibility:public"],
)
