load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

ts_library(
    name = "app",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types/node",
    ],
)

nodejs_binary(
    name = "main",
    entry_point = "bazel_demo/src",
    data = [":app"],
    visibility = ["//visibility:public"],
)
