load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

ts_library(
    name = "ts_app",
    srcs = glob(["*.ts"]),
    module_name = "bazel-demo/app",
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//chalk",
    ],
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "app",
    entry_point = "bazel_demo/src",
    data = [":ts_app"],
    visibility = ["//visibility:public"],
)
