load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "ts_lib",
    srcs = glob(["*.ts"]),
    module_name = "bazel_demo_main/app",
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types/node",
        "@npm//chalk",
        "@bazel_demo_external//module:ts_lib",
    ],
    visibility = ["//visibility:public"],
)
